# cmfo-universe

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html  index.md  markdown-page.html  package-lock.json  sitemap.xml
.github/: release-template.md
.github/workflows/: ci.yml  coverage.yml  release.yml
assets/: api  cont  doc  docs  index.html  lic  style.css  we
assets/css/: styles.103d090a.css  styles.d431f5a7.css  styles.f7aa7d44.css
assets/js/: 0058b4c6.49a6c85d.js  05673433.160d0a8d.js  05673433.59008b2e.js  0e384e19.92361164.js  0e384e19.9b9eabf1.js  0e384e19.ee0aa6b4.js  18c41134.16c21f90.js  18c41134.7b05cf46.js  18c41134.b4b15adb.js  1df93b7f.2134d6a4.js  1df93b7f.e73cccdb.js  1e4232ab.d6156f1c.js  1e4232ab.fc4bb390.js  264017a3.147d0a08.js  264017a3.15771a89.js  393be207.5bbed092.js  533a09ca.3e90296a.js  533a09ca.8d8fe8c0.js  5c868d36.0a5bce5b.js  5c868d36.bcd18870.js  660eed3b.023428f9.js  660eed3b.3d3205d0.js  822bd8ab.3d729f84.js  822bd8ab.fe8c2678.js  c4f5d8e4.0462ca8e.js  c4f5d8e4.5273c9a9.js  c4f5d8e4.a4d5f93d.js  c8a4e95a.0386a54c.js  d9f32620.f3fa8080.js  dff1c289.0ba4d3a0.js  dff1c289.5ad07ae6.js  dff1c289.ed8f0648.js  e44a2883.1e349082.js  e44a2883.60c3e17f.js  e44a2883.83a5766c.js  f55d3e7a.30214891.js  f55d3e7a.ca28ddef.js  main.0299c190.js  main.0d1df80e.js  main.296e39c8.js  (+3 more)
blog/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/authors/all-sebastien-lorber-articles/: index.html
blog/authors/yangshun/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
cuda/: cmfo_kernels.cu  theta_cmfo_kernel.cu
docs/: INSTALLATION.md  NUMERICAL_TOLERANCES.md  THEORY_PHI_LOGIC.md  THEORY_SOLITON.md  index.html  intro.html  math_references.md  theory_solitons.md
docs/category/: tutorial---basics.html  tutorial---extras.html
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/intro/: index.html
docs/tutorial-basics/: congratulations.html  create-a-blog-post.html  create-a-document.html  create-a-page.html  deploy-your-site.html  markdown-features.html
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-blog-post/: index.html
docs/tutorial-basics/create-a-document/: index.html
docs/tutorial-basics/create-a-page/: index.html
docs/tutorial-basics/deploy-your-site/: index.html
docs/tutorial-basics/markdown-features/: index.html
docs/tutorial-extras/: manage-docs-versions.html  translate-your-site.html
docs/tutorial-extras/manage-docs-versions/: index.html
docs/tutorial-extras/translate-your-site/: index.html
examples/: README.md  basic_tensor.py  matrix_operations.py  phi_logic_demo.py
include/: cmfo_core.h  cmfo_soliton.h  cmfo_tolerances.h
markdown-page/: index.html
node/: package.json  test.js
python/: README.md  cmfo_py.c  demo_phi_logic.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  verify_soliton.py
python/cmfo/: tolerances.py
python/cmfo_universe/: __init__.py  core.py  mat7.py  tensor7.py
python/cmfo_universe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_py_core.py
src/: cmfo_core.c  cmfo_mat7.c  cmfo_mat7_det.c  cmfo_mat7_inv.c  cmfo_mat7_mul.c  cmfo_soliton.c  cmfo_tensor7.c
tests/: CMakeLists.txt  ci_ctest_target.sh  test_core.c  test_cuda.cu  test_mat7.c  test_mat7_det.c  test_mat7_inv.c  test_mat7_mul.c  test_mat7_stability.c  test_soliton_collision.c  test_tensor7.c  test_tensor7_props.c  test_theta_kernel.cu  verify_soliton_math.py
website/: deploy.ps1  docusaurus.config.js  index.html  package-lock.json  package.json
website/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
website/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-intro-md-0e3.json  site-docs-tutorial-basics-congratulations-md-822.json  site-docs-tutorial-basics-create-a-blog-post-md-533.json  site-docs-tutorial-basics-create-a-document-md-1e4.json  site-docs-tutorial-basics-create-a-page-md-5c8.json  site-docs-tutorial-basics-deploy-your-site-md-f55.json  site-docs-tutorial-basics-markdown-features-mdx-18c.json  site-docs-tutorial-extras-manage-docs-versions-md-dff.json  site-docs-tutorial-extras-translate-your-site-md-e44.json
website/.docusaurus/docusaurus-plugin-content-docs/default/p/: cmfo-universe-docs-26d.json  cmfo-universe-docs-category-tutorial-basics-722.json  cmfo-universe-docs-category-tutorial-extras-0b1.json
website/.docusaurus/docusaurus-plugin-content-pages/default/: site-src-pages-markdown-page-md-393.json
website/.docusaurus/docusaurus-plugin-debug/default/p/: cmfo-universe-docusaurus-debug-content-d75.json  docusaurus-debug-content-0d5.json
website/docs/: intro.md
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
