[metadata]
name = cmfo-universe
version = 1.0.0
author = Jonnathan Montero Víquez
author_email = jonnathanmonteroviquez@gmail.com
license = MIT
description = CMFO Universe: Fractal Toroidal 7D Computational Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1JONMONTERV/cmfo-universe
project_urls =
    Homepage = https://1jonmonterv.github.io/cmfo-universe
    Source = https://github.com/1JONMONTERV/cmfo-universe
    Documentation = https://1jonmonterv.github.io/cmfo-universe

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
